Added introductory text (copied from introductions to wikipedia articles) as introductions to sub sections for six distributions. Relevant references to wikipedia articles added
Next steps: demonstrating use of the functions by plotting distributions.

--- a/Numpy-Random.ipynb
+++ b/Numpy-Random.ipynb
@@ -97,7 +97,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Uniform Distribution"
+    "### Uniform Distribution\n",
+    "\n",
+    "Uniform Random Variables are used to model a scenario where a continuous random variable can take values that are equally distributed (with equal probability) in an interval. Uniform distribution is the underlying distribution to model such random variables.\n",
+    "\n",
+    "Another way of saying \"discrete uniform distribution\" would be \"a known, finite number of outcomes equally likely to happen\".\n",
+    "\n",
+    "A simple example of the discrete uniform distribution is throwing a fair die. The possible values are 1, 2, 3, 4, 5, 6, and each time the dice is thrown the probability of a given score is 1/6. If two dice are thrown and their values added, the resulting distribution is no longer uniform since not all sums have equal probability. "
    ]
   },
   {
@@ -131,35 +137,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Normal Distribution"
+    "### Normal Distribution\n",
+    "\n",
+    "In probability theory, the normal (or Gaussian or Gauss or Laplace–Gauss) distribution is a very common continuous probability distribution. Normal distributions are important in statistics and are often used in the natural and social sciences to represent real-valued random variables whose distributions are not known. A random variable with a Gaussian distribution is said to be normally distributed and is called a normal deviate. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Bernoulli Distribuion"
+    "### Binomial Distribution\n",
+    "\n",
+    "In probability theory and statistics, the binomial distribution with parameters n and p is the discrete probability distribution of the number of successes in a sequence of n independent experiments, each asking a yes–no question, and each with its own boolean-valued outcome: a random variable containing a single bit of information: success/yes/true/one (with probability p) or failure/no/false/zero (with probability q = 1 − p). A single success/failure experiment is also called a Bernoulli trial or Bernoulli experiment and a sequence of outcomes is called a Bernoulli process; for a single trial, i.e., n = 1, the binomial distribution is a Bernoulli distribution. The binomial distribution is the basis for the popular binomial test of statistical significance.\n",
+    "\n",
+    "The binomial distribution is frequently used to model the number of successes in a sample of size n drawn with replacement from a population of size N. If the sampling is carried out without replacement, the draws are not independent and so the resulting distribution is a hypergeometric distribution, not a binomial one. However, for N much larger than n, the binomial distribution remains a good approximation, and is widely used."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Binomial Distribution"
+    "### Bernoulli Distribuion\n",
+    "\n",
+    "In probability theory and statistics, the Bernoulli distribution, named after Swiss mathematician Jacob Bernoulli, is the discrete probability distribution of a random variable which takes the value 1 with probability p and the value 0 with probability q = 1 − p , that is, the probability distribution of any single experiment that asks a yes–no question; the question results in a boolean-valued outcome, a single bit of information whose value is success/yes/true/one with probability p and failure/no/false/zero with probability q. It can be used to represent a (possibly biased) coin toss where 1 and 0 would represent \"heads\" and \"tails\" (or vice versa), respectively, and p would be the probability of the coin landing on heads or tails, respectively. In particular, unfair coins would have p ≠ 1 / 2. \n",
+    "\n",
+    "The Bernoulli distribution is a special case of the binomial distribution where a single trial is conducted (so n would be 1 for such a binomial distribution). It is also a special case of the two-point distribution, for which the possible outcomes need not be 0 and 1.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Poisson Distribution"
+    "### Poisson Distribution\n",
+    "\n",
+    "In probability theory and statistics, the Poisson distribution, named after French mathematician Siméon Denis Poisson, is a discrete probability distribution that expresses the probability of a given number of events occurring in a fixed interval of time or space if these events occur with a known constant rate and independently of the time since the last event. The Poisson distribution can also be used for the number of events in other specified intervals such as distance, area or volume.\n",
+    "\n",
+    "For instance, an individual keeping track of the amount of mail they receive each day may notice that they receive an average number of 4 letters per day. If receiving any particular piece of mail does not affect the arrival times of future pieces of mail, i.e., if pieces of mail from a wide range of sources arrive independently of one another, then a reasonable assumption is that the number of pieces of mail received in a day obeys a Poisson distribution. Other examples that may follow a Poisson include the number of phone calls received by a call center per hour and the number of decay events per second from a radioactive source.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exponential Distribution"
+    "### Exponential Distribution \n",
+    "\n",
+    "In probability theory and statistics, the exponential distribution (also known as the negative exponential distribution) is the probability distribution that describes the time between events in a Poisson point process, i.e., a process in which events occur continuously and independently at a constant average rate. It is a particular case of the gamma distribution. It is the continuous analogue of the geometric distribution, and it has the key property of being memoryless. In addition to being used for the analysis of Poisson point processes it is found in various other contexts.\n",
+    "\n",
+    "The exponential distribution is not the same as the class of exponential families of distributions, which is a large class of probability distributions that includes the exponential distribution as one of its members, but also includes the normal distribution, binomial distribution, gamma distribution, Poisson, and many others. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pareto Distribution\n",
+    "\n",
+    "The Pareto distribution, named after the Italian civil engineer, economist, and sociologist Vilfredo Pareto, is a power-law probability distribution that is used in description of social, scientific, geophysical, actuarial, and many other types of observable phenomena. Originally applied to describing the distribution of wealth in a society, fitting the trend that a large portion of wealth is held by a small fraction of the population, the Pareto distribution has colloquially become known and referred to as the Pareto principle, or \"80-20 rule\", and is sometimes called the \"Matthew principle\". This rule states that, for example, 80% of the wealth of a society is held by 20% of its population. However, the Pareto distribution only produces this result for a particular power value, α alpha (α = log45 ≈ 1.16). While α alpha is variable, empirical observation has found the 80-20 distribution to fit a wide range of cases, including natural phenomena and human activities. "
    ]
   },
   {
@@ -182,7 +215,13 @@
    "source": [
     "1. http://www.numpy.org/\n",
     "2. \"Numpy\", https://en.wikipedia.org/wiki/NumPy\n",
-    "3. McKinney, W, (2017) *Python for Data Analysis: Data Wrangling with Pandas, Numpy and IPython (2nd Edition)* O'Reilly Media (note: location references refer to locations in Kindle edition)"
+    "3. \"Discrete uniform_distribution\" https://en.wikipedia.org/wiki/Discrete_uniform_distribution\n",
+    "4. \"Normal distribution\" https://en.wikipedia.org/wiki/Normal_distribution\n",
+    "5. \"Bernoulli distribution\" https://en.wikipedia.org/wiki/Bernoulli_distribution\n",
+    "6. \"Poisson distribution\" https://en.wikipedia.org/wiki/Poisson_distribution\n",
+    "7. \"Exponential distribution\" https://en.wikipedia.org/wiki/Exponential_distribution\n",
+    "8. \"Pareto distribution\" https://en.wikipedia.org/wiki/Pareto_distribution\n",
+    "9. McKinney, W, (2017) *Python for Data Analysis: Data Wrangling with Pandas, Numpy and IPython (2nd Edition)* O'Reilly Media (note: location references refer to locations in Kindle edition)"
    ]
   },
   {
