Added examples of two permutations functions with explanatory text

--- a/Numpy-Random.ipynb
+++ b/Numpy-Random.ipynb
@@ -36,6 +36,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import the numpy library and the pyplot library which we will use later.\n",
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
@@ -168,14 +180,87 @@
     "|permutation(x) | Randomly permute a sequence, or return a permuted range.|\n",
     " \t\n",
     "    \n",
-    "The Shuffle function modifys a sequence in place by shuffling its contents. This function only shuffles the array along the first axis of a multi-dimensional array. The order of sub-arrays is changed but their contents remains the same.\n",
+    "The **Shuffle** function modifys a sequence in place by shuffling its contents. This function only shuffles the array along the first axis of a multi-dimensional array. The order of sub-arrays is changed but their contents remains the same.\n",
     "\n",
+    "The following example shows how the shuffle function may be used to shuffle the contents of a range of values:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  2  3  4  5  6  7  8  9 10]\n",
+      "[ 4  5  7  9  1  8  3  2 10  6]\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
+    "# generate a numpy array of numbers from 1 to 10\n",
+    "listA = np.arange(1,11)\n",
+    "print(listA)\n",
     "\n",
-    "The premutation functions randomly permutes a sequence, or return a permuted range.\n",
+    "# Now, shuffle the contents of the array\n",
     "\n",
+    "np.random.shuffle(listA)\n",
+    "print(listA)\n",
     "\n",
-    "### Permuations example: the Irish Lotto"
+    "# each time you run this snippet, the second operation arranges teh contents of the array in a different order."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Permuations example**\n",
+    "\n",
+    "The random.permutation function permute a sequences, or returns a permuted range.\n",
+    "\n",
+    "If theinput is a multi-dimensional array, it is only shuffled along its first index.\n",
+    "\n",
+    "The following two code examples demonstrate the permuting of a range and of a 3 X 3 array. Wecan see that although the order of the components of the array (lists) are permuted, their inner elements are not."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Example 1: permuting a range\n",
+      "listB  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21]\n",
+      "ListC  [ 6  5 21 17  8 15  2 10  3  4 16  9  7  1 20 18 13 19 11 12 14]\n",
+      "\n",
+      "Example 2: Permuting a 3 X 3 array\n",
+      "3 X 3 array:  [[1, 2, 3], [4, 5, 6], [7, 8, 9], ['cat', 'dog', 'mouse']]\n",
+      "permuted array: [['1' '2' '3']\n",
+      " ['4' '5' '6']\n",
+      " ['cat' 'dog' 'mouse']\n",
+      " ['7' '8' '9']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# permutations\n",
+    "print(\"Example 1: permuting a range\")\n",
+    "listB = np.arange(1,22)\n",
+    "print(\"listB \", listB)\n",
+    "\n",
+    "listC = np.random.permutation(listB)\n",
+    "print(\"ListC \",listC)\n",
+    "print()\n",
+    "print(\"Example 2: Permuting a 3 X 3 array\")\n",
+    "ListD = [[1,2,3],[4,5,6], [7,8,9], [\"cat\", \"dog\", \"mouse\"]]\n",
+    "print(\"3 X 3 array: \",ListD)\n",
+    "print(\"permuted array:\", np.random.permutation(ListD))"
    ]
   },
   {
